# virtci

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  deny.toml  licenses.json
.ci/check/: macos_check_arm64.yml  ubuntu_check_arm64.yml  ubuntu_check_x64.yml  windows_check_arm64.yml  windows_check_x64.yml
.ci/system_tests/: macos_system_tests_arm64.yml  ubuntu_system_tests_arm64.yml  ubuntu_system_tests_x64.yml  windows_system_tests_arm64.yml  windows_system_tests_x64.yml
.ci/upstream/: fetch_ubuntu_images.ps1  fetch_ubuntu_images.sh  generate_seed_iso.sh  seed.iso  ubuntu_server_arm64.json  ubuntu_server_riscv64.json  ubuntu_server_x64.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  full_test_suite.yml  issue_labeler.yml  llm_analysis.yml  release.yml  smoke_tests.yml
docs/: build_from_source.md  env_vars.md  riscv64_linux_setup.md  ubuntu_server_setup.md  windows_host_setup.md  windows_setup.md  workflow_yaml_syntax.md
package/: linux_arm64_package.yml  linux_x64_package.yml  mac_package.yml  windows_arm64_package.yml  windows_x64_package.yml
scripts/: install_swtpm_win.ps1
src/: cli.rs  global_paths.rs  job.rs  lib.rs  lib.rs.disabled  main.rs  orphan.rs  platform.rs  run_state.rs  ssh.rs  yaml.rs
src/backend/: exec.rs  gpt_recovery.rs  mod.rs  qemu.rs  qemu_old.rs  tart.rs
src/backend/qemu/: backend.rs  binaries.rs  kvm.rs  mod.rs  qmp.rs
src/backend/tart/: mod.rs
src/client/: mod.rs  pull.rs  push.rs
src/file_lock/: flock.c  mod.rs  process_time.c
src/run/: command.rs  copy.rs  env.rs  ignore_files.rs  mod.rs  run_id.rs  validate.rs
src/run/cache/: disk_usage.c  disk_usage.rs  file.rs  lru.rs  metadata.rs  mod.rs
src/server/: api.rs  mod.rs  namespace.rs  session.rs
src/server/auth/: mod.rs
src/server/db/: README.md  mod.rs
src/server/db/migrations/: mod.rs  v1.rs
src/transfer_lock/: mod.rs  process_time.c  transfer_lock.c
src/util/: bin_version.rs  cpu_arch.rs  exec_built_cpu_arch.c  git.rs  mod.rs
src/vm_image/: boot.rs  clone.rs  edit.rs  export.rs  import.rs  list.rs  mod.rs  progress.rs  remove.rs  setup_qemu.rs  setup_tart.rs
src/web/: mod.rs  push.rs  web_assets.rs
src/web/client/: mod.rs
src/web/server/: api.rs  mod.rs  session.rs
src/web/server/auth/: mod.rs
test/upstream_image/: README.md  generate_seed_iso.sh  seed.iso
test/virtci/: cargo.yml
tests/: local_workflow_cache.rs  run_upstream_debian.rs  ubuntu_vms_full_workflow_run.rs
tests/common/: mod.rs
tests/s3/: garage.toml
tests/upstream_image/: README.md  basic_test_debian.yml  fetch_debian_genericcloud.sh  generate_seed_iso.sh  seed.iso  test-debian-arm64.json  test-debian-x64.json
tests/virtci/: smoke_tests.yml
web/: .npmrc  README.md  criteria.txt  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
