[package]
name = "virtci"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
argh = "0.1.13"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0.149"
serde_with = "3.17.0"
russh = { version = "0.56", default-features = false, features = ["aws-lc-rs"] }
russh-sftp = "2.0"
tokio = { version = "1", features = [
  "rt",
  "net",
  "time",
  "io-util",
  "macros",
  "process",
  "sync",
  "signal",
] }
colored = "3"
tar = "0.4"
rust-embed = "8"
mime_guess = "2"
tiny_http = "0.12"
rusty-s3 = "0.8.1"

[build-dependencies]
cc = "1.2.27"

[[bin]]
name = "virtci"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
result_unit_err = "allow"
needless_return = "allow"

[profile.release]
debug = true # ship debug symbols
