[package]
name = "virtci"
version = "0.3.1"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
argh = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0.149"
serde_with = "3.17.0"
russh = { version = "0.60.3", default-features = false, features = [
  "aws-lc-rs",
] }
aws-lc-rs = { version = "1", features = ["prebuilt-nasm"] }
russh-sftp = "2.0"
tokio = { version = "1", features = [
  "rt",
  "net",
  "time",
  "io-util",
  "macros",
  "process",
  "sync",
  "signal",
] }
colored = "3"
tar = "0.4.45"
glob = "0.3.3"
rust-embed = "8"
mime_guess = "2"
tiny_http = "0.12"
anyhow = "1.0.102"
blake3 = "1.8.5"

[build-dependencies]
cc = "1.2.27"

[[bin]]
name = "virtci"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
result_unit_err = "allow"
needless_return = "allow"
